feat(mcqs): implemented ai mcq generation; display in ui; evaluation of answers

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ DB_PORT=5432
 DATABASE_URL=postgresql://$DB_USER:$DB_PASSWORD@localhost/$DB_NAME
 BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=http://localhost:3000
+GOOGLE_GENERATIVE_AI_API_KEY=<your_google_api_key_here>
