--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "pnpm run db:auth-seed",
+    "db:auth-seed": "pnpm dlx @better-auth-kit/cli@latest seed"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.5",
+    "@better-auth-kit/seed": "^1.0.11",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -39,7 +44,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.30.4",
+    "drizzle-kit": "^0.30.6",
     "pg": "^8.13.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
